--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "next": "14.2.3",
     "prettier": "^3.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animatecss": "^3.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
